<resources>
    <string name="app_name">Digi-MORE</string>
    <string name="home">Home</string>
    <string name="sendmoney">Send Money To</string>
    <string name="menu_home">Home</string>
    <string name="requestmoney">Request money</string>
    <string name="menu_lang">Language</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_support">Support</string>
    <string name="description">We need this service to fetch balance from pop-up messages. It is absolutely safe to use.</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="please_turn_on">Turn on</string>
    <string name="from_accessibility_settings">from accessibility settings</string>
    <string name="accessibility_service_not_enabled_message">"If accessibility service is turned off for this app, we can't fetch your bank balance. We read USSD message only to fetch your bank balance, that's it. So it is absolutely safe to use."</string>
    <string name="accessibility_label"><b>●● Digi-MORE ●●</b></string>
    <string name="step1a">1. First, download and install the BHIM App.</string>
    <string name="download_phonepe">Download PhonePe</string>
    <string name="step2">2. Open the app and follow the initial instructions.</string>
    <string name="step3">3. Verify your mobile number(standard SMS charges may apply). In case of dual SIM, select the SIM that is linked to your bank account.</string>
    <string name="step4">4. Enter your name, valid email and set 4 Digit password.</string>
    <string name="step5">5. Proceed to the next step and click on Create New VPA(This will be your upi address used for future transactions).</string>
    <string name="step6">6. Select your bank and then your bank details will be fetched automatically.</string>
    <string name="step7">7. Click on \'Set MPIN\'.</string>
    <string name="step8">8. Enter details of your debit card and click on verify.</string>
    <string name="step9">9. You will get an OTP from your bank. Enter that OTP.</string>
    <string name="step10">10. Enter a 6-digit UPI PIN and re-enter to confirm. Please note that this UPI Pin will be used in the future for your all transaction. So don\'t share this pin to anyone.</string>
    <string name="step11">11. After successful registration click OK and open Digi-MORE app and click on UPDATE BALANCE.</string>
    <string name="heading_register_for_upi">If you haven\'t registered on UPI, follow these steps</string>
    <string name="peding_requests">Pending Requests</string>
    <string name="button_continue">Continue</string>
    <string name="verify_mobile">We need to call from your phone to verify if your mobile number is registered on UPI.\nIn case of dual SIM, select the SIM that is linked to your bank account.</string>
    <string name="no_pending_requests_found">No Pending Requests found</string>
    <string name="verify_notification">It seems your Mobile Number is not registered on UPI. Please call *99# from your mobile number which is registered with your bank and follow the steps.</string>
    <string name="call_99">Call *99#</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="request_from">Request from</string>
    <string name="enter_mobile_no">Enter Mobile no</string>
    <string name="enter_amount_max_5000">Enter amount (max ₹5000)</string>
    <string name="upi_pin_warning_message">Enter your UPI PIN in the next screen to complete the transaction</string>
    <string name="transaction_details_never_checked">Transaction details never checked</string>
    <string name="update">Update</string>
    <string name="balance">Balance</string>
    <string name="basic_services">BASIC SERVICES</string>
    <string name="send">Send</string>
    <string name="request">Request</string>
    <string name="recharge">Recharge</string>
    <string name="other_services">Other Services</string>
    <string name="transaction">Transaction</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="upi_pin">UPI PIN</string>
    <string name="change_language">Change Language</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="payment_address">Payment Address</string>
    <string name="saved_beneficiary">Saved Beneficiary</string>
    <string name="ifsc_account_number">IFSC, Account Number</string>
    <string name="select_an_option">SELECT AN OPTION</string>
    <string name="user_details">User details</string>
    <string name="bank_name">Bank Name :</string>
    <string name="account_number">Account Number :</string>
    <string name="my_details">My details</string>
    <string name="change_bank_account">Change Bank Account</string>
    <string name="manage_beneficiary">Manage Beneficiary</string>
    <string name="become_a_merchant">Become A Merchant</string>
    <string name="de_register">De Register</string>
    <string name="enter_receiver_s_aadhar_no">Enter receiver\'s Aadhar no</string>
    <string name="amount">Amount</string>
    <string name="send_to">Send to</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="enter_receiver_s_ifsc_code">Enter receiver\'s IFSC code</string>
    <string name="enter_receiver_s_account_no">Enter receiver\'s Account no</string>
    <string name="enter_receiver_s_mobile_no">Enter receiver\'s Mobile no</string>
    <string name="enter_receiver_s_payment_address">Enter receiver\'s Payment address</string>
    <string name="upi_pin_warning">Your UPI Pin will be used in all future transaction. So don\'t share this pin to anyone and try changing your Pin at least once in a month.</string>
    <string name="recharge_instructions">1. Save our payment address as a beneficiary and name it \'Recharge\' or whatever you like. \n2. Send recharge amount to the mentioned beneficiary by entering your UPI PIN. \n3. Within 10 minutes, give a missed call to us(we will not pick your phone unless you want to talk to no one). \n\nFollow these simple steps and we will do your recharge within no time. In case of failure, we will refund your money within 24 hours.</string>
</resources>