<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_one"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24px"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_three"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle_black_24px"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_four"
        android:enabled="true"
        android:icon="@drawable/ic_help_black_24px"
        android:title="@string/menu_support"
        app:showAsAction="ifRoom" />
</menu>