<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heading_register_for_upi"
                android:textAlignment="center"
                android:textColor="@color/textColorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/white"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/get_started_install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:backgroundTint="#e9e9e9"
                    android:maxLines="1"
                    android:text="Install"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/step1a2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_toLeftOf="@+id/get_started_install"
                    android:text="@string/step1a"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/default_text_size" />
            </RelativeLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step3"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step4"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step5"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step6"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step7"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step8"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step9"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step10"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step11"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/default_text_size" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>