<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.sohaari.activity.SendMoney">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="#ffffff" />

    <LinearLayout
        android:id="@+id/services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:textAllCaps="true"
            android:text="@string/choose_an_option"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:layout_width="@dimen/image_height_medium"
                    android:layout_height="@dimen/image_height_medium"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/drawable_back_light"
                    android:clickable="true"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/list_padding_medium"
                    android:text="@string/mobile_number"
                    android:textSize="@dimen/list_text_size_medium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/aadhar_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:layout_width="@dimen/image_height_medium"
                    android:layout_height="@dimen/image_height_medium"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/drawable_back_light"
                    android:clickable="true"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_fingerprint"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/list_padding_medium"
                    android:text="@string/aadhar_number"
                    android:textSize="@dimen/list_text_size_medium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/payment_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:layout_width="@dimen/image_height_medium"
                    android:layout_height="@dimen/image_height_medium"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/drawable_back_light"
                    android:clickable="true"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_home"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/list_padding_medium"
                    android:text="@string/payment_address"
                    android:textSize="@dimen/list_text_size_medium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/saved_beneficiary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:layout_width="@dimen/image_height_medium"
                    android:layout_height="@dimen/image_height_medium"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/drawable_back_light"
                    android:clickable="true"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_people"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/list_padding_medium"
                    android:text="@string/saved_beneficiary"
                    android:textSize="@dimen/list_text_size_medium" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:background="@color/divider" />

            <LinearLayout
                android:id="@+id/ifsc_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_small">

                <ImageView
                    android:layout_width="@dimen/image_height_medium"
                    android:layout_height="@dimen/image_height_medium"
                    android:background="@drawable/background_circle"
                    android:backgroundTint="@color/drawable_back_light"
                    android:clickable="true"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_bank"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/list_padding_medium"
                    android:text="@string/ifsc_account_number"
                    android:textSize="@dimen/list_text_size_medium" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/divider_margin_start"
                android:background="@color/divider" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/services"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/select_an_option"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/tv"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:alpha="0.8"
                android:gravity="center"
                android:src="@drawable/ic_contact_phone_black_24px" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/frame1"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:alpha="0.8"
                android:gravity="center"
                android:src="@drawable/ic_fingerprint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/aadhar_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame3"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/frame2"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:alpha="0.8"
                android:gravity="center"
                android:src="@drawable/ic_home_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/payment_address"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame4"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/frame3"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:gravity="center"
                android:src="@drawable/ic_people_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="@string/saved_beneficiary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame5"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/frame4"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:alpha="0.8"
                android:gravity="center"
                android:src="@drawable/ic_account_balance_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="ifsc_account_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame6"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/frame5"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:alpha="0.8"
                android:gravity="center"
                android:src="@drawable/ic_phone_iphone_black_24px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="MMID, Mobile Number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
